<resources>
    <string name="app_name">Kayilar Carpet</string>

    <string name="login">Login</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="verification_code">Verification Code</string>
    <string name="there_was_some_error_in_login_in">There was some error in Login in.</string>
    <string name="dismiss">Dismiss</string>
    <string name="the_verification_code_entered_was_invalid">The verification code entered was invalid</string>
    <string name="please_enter_verfi_code">Please enter verify code !</string>
    <string name="resend_code_one_more_time">Resend code one more time</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_your_phone_number">Add your Phone number</string>
    <string name="birth_date">Birth Date</string>
    <string name="enter_your_phone_number_in_order_to_send_your_otp_security_code">Enter your phone number in order to send your OTP security code.</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="you_have_already_account">You have already Account?</string>
    <string name="check_code">Check Code</string>
    <string name="previous">Previous</string>
    <string name="select_your_gender">Select your Gender</string>
    <string name="login_number_phone">Login Number Phone</string>
    <string name="you_don_t_have_an_account">You don\'t have an Account?</string>
    <string name="upload_data">Upload Data …</string>
    <string name="this_user_already_exists">This user already exists</string>
    <string name="this_number_is_not_sign_up_before_please_sign_up_first">This number is not Sign Up before, please Sign Up first.</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">APPLY</string>
    <string name="subtotal">Subtotal </string>
    <string name="total">TOTAL :</string>
    <string name="remove">Remove</string>
    <string name="buy_now">BUY NOW</string>
    <string name="checkout">Checkout</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="item">Item : </string>
    <string name="show_order_history">Show Order History</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="free_delivery">Free delivery</string>
    <string name="search_hint">Search ..</string>
    <string name="pending">Pending</string>
    <string name="on_progress">On Progress</string>
    <string name="delivered_done">Delivered</string>
    <string name="all">All</string>
    <string name="address">Address</string>
    <string name="delivery_state">State</string>
    <string name="orderHistory">Order History</string>
    <string name="no_item_added_yet">no item added yet !</string>
    <string name="promo_not_valid">This Code is not valid</string>
    <string name="cant_use_same_promo">Can\'t use same promo in different order</string>
    <string name="sale">Sale</string>
    <string name="your_order_is_send">You Order is send</string>
    <string name="please_wait">Please wait</string>
    <string name="off">OFF</string>
    <string name="checking">Checking …</string>
    <string name="no_item_inside_in_cart">No item inside in cart</string>
    <string name="logout">Logout</string>
    <string name="failed_download_image">Failed to download the image, please try again.</string>
    <string name="language_pref">en</string>
    <string name="jd">%1$s JD</string>
    <string name="select_size">Select Size :</string>
    <string name="total_0_00_jd">Total : %1$s JD</string>
    <string name="select_one_size_at_least">Select one size at least</string>
    <string name="show_sizes">Show Sizes</string>
    <string name="size_avi">%1$s x Size</string>
</resources>