<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">


    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph"
        tools:ignore="FragmentTagUsage" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="12dp"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsHome"
            style="@style/Widget.MaterialComponents.ActionBar.Solid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/tabBarText">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabHome"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:icon="@drawable/ic_home"
                android:text="@string/home" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCart"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:icon="@drawable/ic_cart"
                android:text="@string/cart" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFavorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:icon="@drawable/ic_favorite"
                android:text="@string/favorite" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabAccount"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:icon="@drawable/ic_account"
                android:text="@string/account" />


        </com.google.android.material.tabs.TabLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>