<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="16dp">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="@color/colorPrimary"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/section_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardSlider"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/card_section" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsHome"

        style="@style/Widget.MaterialComponents.TabLayout.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true">

        <com.google.android.material.tabs.TabItem
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:icon="@drawable/ic_home"

            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:icon="@drawable/ic_cart"
            android:text="@string/cart" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:icon="@drawable/ic_favorite"
            android:text="@string/favorite" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:icon="@drawable/ic_account"
            android:text="@string/account" />


    </com.google.android.material.tabs.TabLayout>

</RelativeLayout>